--- a/.air.toml
+++ b/.air.toml
@@ -13,8 +13,8 @@ tmp_dir = "tmp"
   exclude_unchanged = false
   follow_symlink = false
   full_bin = ""
-  include_dir = ["views", "public"]
-  include_ext = ["go", "tpl", "tmpl", "html"]
+  include_dir = ["views", "public", "src"]
+  include_ext = ["go", "tpl", "tmpl", "html", "css", "js", "env"]
   include_file = []
   kill_delay = "0s"
   log = "build-errors.log"
